--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -20,14 +20,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          registry-url: https://npm.pkg.github.com
-          scope: "@mmrakt"
+          node-version-file: .node-version
+        env:
+          NPM_TOKEN: ${{secrets:GITHUB_TOKEN}}
 
       - name: Install
-        run: npm install
-
-      # - name: Build
-      #   run: npm run build
+        run: npm ci
 
       - name: Publish npm package
         run: npm publish
